# demo-hachi

./: AGENTS.md  README.md  app.py  app_pydeck.py  desc.md  hachi_office.duckdb  main.py  pyproject.toml  utils.py  view.py
geojson/: hachiouji_aza.geojson  hachiouji_aza_simplified.geojson
