[project]
name = "demo-hachiouji"
version = "0.1.0"
description = "Hatchiouji big data chart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
]
